--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>We do great work</h1>
+    <h1>I will do a great work</h1>
     <button>Explore</button>
 </body>
 </html>
