--- a/hero/index.html
+++ b/hero/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HERO Section</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I will do a great work</h1>
-    <button>Explore</button>
+    <div id="main">
+        <h1>One life, make it Legendary</h1>
+        <button>Stay Focused</button>
+    </div>
 </body>
 </html>
